--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "dom-to-image": "^2.6.0",
-    "node-sass": "^5.0.0",
+    "node-sass": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
@@ -34,7 +34,7 @@
     "production": [
       ">0.3%",
       "not ie 11",
-      "not dead", 
+      "not dead",
       "not op_mini all"
     ],
     "development": [
