--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "dom-to-image": "^2.6.0",
-    "node-sass": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
@@ -48,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/dom-to-image": "^2.6.2"
+    "@types/dom-to-image": "^2.6.2",
+    "sass": "^1.83.4"
   }
 }
